started with matching too

--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -58,7 +58,7 @@ In Chapter \ref{ch:constituent-containment}, I suggested that this difference ca
   \label{fig:rel-lh-matching-derive}
 \end{figure}
 
-When the internal and the external case match, the relative pronoun can delete the light head, because the light head forms a single constituent within the relative pronoun.
+When the internal and the external case match, the light head can be deleted, because the light head forms a single constituent within the relative pronoun.
 When the internal case is more complex than the external case, the light head is not a single constituent within the relative pronoun anymore. The relative pronoun contains all features of the light head, but they are spread over separate constituents. As a result, there is no grammatical form to surface when the internal case is more complex.
 When the external case is more complex than the internal case, the relative pronoun is not a single constituent within the light head. The relative pronoun contains features that are not part of the light head. As a result, there is no grammatical form to surface when the internal case is more complex.
 
@@ -157,7 +157,7 @@ The chapter is structured as follows.
 First, I discuss the light head. I decompose the light head into the two morphemes I showed in Figure \ref{fig:rel-lh-pol}, and I show which features correspond to which morphemes. I show that Polish headless relatives are derived from a type of light-headed relative clause that does not surface in the language, just like their Modern German counterparts.
 Then, I discuss the relative pronoun. I show that the Polish relative pronoun consist of one more morpheme than Polish light head.
 Importantly, the features that form the Polish light head and relative pronoun are the same ones that form the Modern German ones. The only difference between the two languages is how the features are spelled out.
-Finally, I compare the constituents of the light head and the relative pronoun. I show that the relative pronoun can only delete the light head when the internal case matches the external case. When the internal and external case differ, I show that none of the elements can delete the other one.
+Finally, I compare the constituents of the light head and the relative pronoun. I show that the relative pronoun can only delete the light head when the internal case matches the external case. When the internal and external case differ, I show that none of the elements can be deleted.
 
 
 \section{The Polish extra light head}\label{sec:pol-elh}
@@ -185,10 +185,7 @@ In Chapter \ref{ch:deriving-onlyinternal}, I argued for Modern German that the f
               [\tsc{an}]
               [\tsc{cl}P
                   [\tsc{cl}]
-                  [ΣP
-                      [Σ]
-                      [\tsc{ref}]
-                  ]
+                  [\tsc{ref}]
               ]
           ]
       ]
@@ -229,10 +226,7 @@ Specifically, I argue that Polish light heads have the structure shown in \ref{e
           [\tsc{an}]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
       [\tsc{k}P,
@@ -435,10 +429,7 @@ I repeat the functional sequence of the extra light head in \ref{ex:fseq-wh-lh-p
               [\tsc{an}]
               [\tsc{cl}P
                   [\tsc{cl}]
-                  [ΣP
-                      [Σ]
-                      [\tsc{ref}]
-                  ]
+                  [\tsc{ref}]
               ]
           ]
       ]
@@ -514,10 +505,7 @@ The structure that the combination of \tit{o} and \tit{mu} spell out is the synt
                     [\tsc{an}]
                     [\tsc{cl}P
                         [\tsc{cl}]
-                        [ΣP
-                            [Σ]
-                            [\tsc{ref}]
-                        ]
+                        [\tsc{ref}]
                     ]
                 ]
             ]
@@ -534,10 +522,7 @@ The morpheme \tit{o} is syncretic between the masculine and the neuter. This can
       [\tsc{an}]
       [\tsc{cl}P
           [\tsc{cl}]
-          [ΣP
-              [Σ]
-              [\tsc{ref}]
-          ]
+          [\tsc{ref}]
       ]
   ]
   {\draw (.east) node[right]{⇔ \tit{o}}; }
@@ -557,10 +542,7 @@ In \ref{ex:pol-spellout-o-an}, I give the syntactic structure of a masculine for
       [\tsc{an}]
       [\tsc{cl}P
           [\tsc{cl}]
-          [ΣP
-              [Σ]
-              [\tsc{ref}]
-          ]
+          [\tsc{ref}]
       ]
   ]
 \end{forest}
@@ -569,7 +551,7 @@ In \ref{ex:pol-spellout-o-cl}, I give the syntactic structure of a masculine for
 
 \ex.\label{ex:pol-spellout-o-cl}
 \begin{forest} boom
-  [\tsc{ck}P,
+  [\tsc{cl}P,
   tikz={
   \node[label=below:\tit{o},
   draw,circle,
@@ -577,10 +559,7 @@ In \ref{ex:pol-spellout-o-cl}, I give the syntactic structure of a masculine for
   fit to=tree]{};
   }
       [\tsc{cl}]
-      [ΣP
-          [Σ]
-          [\tsc{ref}]
-      ]
+      [\tsc{ref}]
   ]
 \end{forest}
 
@@ -623,14 +602,9 @@ The morpheme \tit{go} differs from \tit{mu} in that it lacks the feature \tit{f}
 
 In what follows, I construct the Polish extra light heads. I follow the same functional sequence as I did for Modern German. Also, of course, the spellout procedure is identical. The outcome is different because of the different lexical entries Polish has.
 
-Starting from the bottom, the first two features that are merged \tsc{ref} and Σ, creating a ΣP.
+Starting from the bottom, the first two features that are merged \tsc{ref} and \tsc{cl}, creating a \tsc{cl}P.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-o}, which corresponds to the \tit{o}.
-Therefore, the ΣP is spelled out as \tit{o}, which I do not show here.
-
-The features \tsc{cl} and \tsc{an} are merged and spelled out in the same way.
-First, the feature \tsc{cl} is merged, and a \tsc{cl}P is created.
-The syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-o}.
-Therefore, the \tsc{cl}P is spelled out as \tit{o}.
+Therefore, the \tsc{cl}P is spelled out as \tit{o}, which I do not show here.
 Then, the feature \tsc{an} is merged, and a \tsc{an}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-o}.
 Therefore, the \tsc{an}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellout-o-rel}.
@@ -647,10 +621,7 @@ Therefore, the \tsc{an}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellou
       [\tsc{an}]
       [\tsc{cl}P
           [\tsc{cl}]
-          [ΣP
-              [Σ]
-              [\tsc{ref}]
-          ]
+          [\tsc{ref}]
       ]
   ]
 \end{forest}
@@ -684,10 +655,7 @@ The second movement option in the Spellout Algorithm is moving the complement, a
               [\tsc{an}]
               [\tsc{cl}P
                   [\tsc{cl}]
-                  [ΣP
-                      [Σ]
-                      [\tsc{ref}]
-                  ]
+                  [\tsc{ref}]
               ]
           ]
       ]
@@ -735,10 +703,7 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
           [\tsc{an}]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
       [\tsc{acc}P,
@@ -778,10 +743,7 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu}, so it is 
           [\tsc{an}]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
       [\tsc{dat}P,
@@ -882,25 +844,13 @@ In \ref{ex:pol-fseq-rel} I repeat the functional sequence I proposed in Chapter 
            [\tsc{rel}]
            [\tsc{wh}P
                [\tsc{wh}]
-               [\tsc{med}P
-                   [\tsc{dx}\scsub{2}]
-                   [\tsc{prox}P
-                       [\tsc{dx}\scsub{1}]
-                       [\tsc{c}P
-                           [\tsc{c}]
-                           [\tsc{ind}P
-                               [\tsc{ind}]
-                               [\tsc{an}P
-                                   [\tsc{an}]
-                                   [\tsc{cl}P
-                                       [\tsc{cl}]
-                                       [ΣP
-                                            [Σ]
-                                            [\tsc{ref}]
-                                       ]
-                                   ]
-                               ]
-                           ]
+               [\tsc{ind}P
+                   [\tsc{ind}]
+                   [\tsc{an}P
+                       [\tsc{an}]
+                       [\tsc{cl}P
+                           [\tsc{cl}]
+                            [\tsc{ref}]
                        ]
                    ]
                ]
@@ -910,7 +860,7 @@ In \ref{ex:pol-fseq-rel} I repeat the functional sequence I proposed in Chapter 
   \end{forest}
 \end{adjustbox}
 
-The features that are not contained in the extra light head are \tsc{c}, \tsc{dx}\scsub{1}, \tsc{dx}\scsub{2}, \tsc{wh} and \tsc{rel}. In addition, I propose that \tit{k} also spells out the features \tsc{ind}, \tsc{an} and \tsc{cl}.
+The features that are not contained in the extra light head are \tsc{wh} and \tsc{rel}. In addition, I propose that \tit{k} also spells out the features \tsc{ind}, \tsc{an} and \tsc{cl}.
 
 In sum, I argue that Polish relative pronouns have the structure shown in \ref{ex:pol-rel}.
 
@@ -928,20 +878,11 @@ In sum, I argue that Polish relative pronouns have the structure shown in \ref{e
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{med}P
-                  [\tsc{dx}\scsub{2}]
-                  [\tsc{prox}P
-                      [\tsc{dx}\scsub{1}]
-                      [\tsc{c}P
-                          [\tsc{c}]
-                          [\tsc{ind}P
-                              [\tsc{ind}]
-                              [\tsc{an}P
-                                  [\tsc{an}]
-                                  [\tsc{cl}]
-                              ]
-                          ]
-                      ]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+                  [\tsc{an}P
+                      [\tsc{an}]
+                      [\tsc{cl}]
                   ]
               ]
           ]
@@ -957,10 +898,7 @@ In sum, I argue that Polish relative pronouns have the structure shown in \ref{e
           [\tsc{an}P]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
           [\tsc{k}P,
@@ -1006,7 +944,7 @@ I continue with the deixis features. I follow Baunaz/Lander and specifically for
 Finally, since the relative pronouns do not have a morphological plural, I assume that \tit{k} contains the feature \tsc{ind}.
 Lastly, \tsc{k} also contains \tsc{an} and \tsc{cl}.
 
-In sum, the morpheme \tit{k} realizes the features \tsc{wh}, \tsc{rel}, \tsc{dx}\scsub{1}, \tsc{dx}\scsub{2}, \tsc{c}, \tsc{ind}, \tsc{an} and \tsc{cl}.
+In sum, the morpheme \tit{k} realizes the features \tsc{wh}, \tsc{rel}, \tsc{ind}, \tsc{an} and \tsc{cl}.
 
 \footnote{
 Actually, to be able to derive the inanimate relative pronoun, I assume that there is a pointer in the lexical entry for \tit{k}, as shown in \ref{ex:pol-entry-k-pointer}.
@@ -1047,20 +985,11 @@ The pointer is situated above the \tsc{c}P. That means that if there is no anima
       [\tsc{rel}]
       [\tsc{wh}P
           [\tsc{wh}]
-          [\tsc{med}P
-              [\tsc{dx}\scsub{2}]
-              [\tsc{prox}P
-                  [\tsc{dx}\scsub{1}]
-                  [\tsc{c}P
-                      [\tsc{c}]
-                      [\tsc{ind}P
-                          [\tsc{ind}]
-                          [\tsc{an}P
-                              [\tsc{an}]
-                              [\tsc{cl}]
-                          ]
-                      ]
-                  ]
+          [\tsc{ind}P
+              [\tsc{ind}]
+              [\tsc{an}P
+                  [\tsc{an}]
+                  [\tsc{cl}]
               ]
           ]
       ]
@@ -1070,27 +999,27 @@ The pointer is situated above the \tsc{c}P. That means that if there is no anima
 
 In what follows, I show how the Polish relative pronouns are constructed.
 
-Until the feature \tsc{ind}, the derivation is identical to the one of the extra light. Therefore, I start at point at which the feature \tsc{c} is merged.
-The derivation for this feature resembles the derivation of \tsc{c} in Modern German.
-The feature is merged with the existing syntactic structure, creating a \tsc{c}P.
+Until the feature \tsc{ind}, the derivation is identical to the one of the extra light. Therefore, I start at point at which the feature \tsc{wh} is merged.
+The derivation for this feature resembles the derivation of \tsc{wh} in Modern German.
+The feature is merged with the existing syntactic structure, creating a \tsc{wh}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
-Therefore, in a second workspace, the feature \tsc{c} is merged with the feature \tsc{ind} (the previous syntactic feature on the functional sequence) into a \tsc{c}P. This syntactic structure does not form a constituent in any of the lexical trees in the language's lexicon.
-Therefore, the feature \tsc{c} combines not only with the feature merged before it, but with a phrase that consists of the two features merged before it: \tsc{ind} and \tsc{an}. Also this syntactic structure does not form a constituent in any of the lexical trees in the language's lexicon.
-Therefore, the feature \tsc{c} combines with a phrase that consists of the three features merged before it: \tsc{ind} \tsc{an} and \tsc{cl}. This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-k}, which corresponds to the \tit{k}.
-Therefore, the \tsc{c}P is spelled out as \tit{k}. The newly created phrase is merged as a whole with the already existing structure, and projects to the top node, as shown in \ref{ex:pol-spellout-cp}.
+Therefore, in a second workspace, the feature \tsc{wh} is merged with the feature \tsc{ind} (the previous syntactic feature on the functional sequence) into a \tsc{wh}P. This syntactic structure does not form a constituent in any of the lexical trees in the language's lexicon.
+Therefore, the feature \tsc{wh} combines not only with the feature merged before it, but with a phrase that consists of the two features merged before it: \tsc{ind} and \tsc{an}. Also this syntactic structure does not form a constituent in any of the lexical trees in the language's lexicon.
+Therefore, the feature \tsc{wh} combines with a phrase that consists of the three features merged before it: \tsc{ind}, \tsc{an} and \tsc{cl}. This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-k}, which corresponds to the \tit{k}.
+Therefore, the \tsc{wh}P is spelled out as \tit{k}. The newly created phrase is merged as a whole with the already existing structure, and projects to the top node, as shown in \ref{ex:pol-spellout-whp}.
 
-\ex.\label{ex:pol-spellout-cp}
+\ex.\label{ex:pol-spellout-whp}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{c}P, s sep=30mm
-      [\tsc{c}P,
+  [\tsc{wh}P, s sep=30mm
+      [\tsc{wh}P,
       tikz={
       \node[label=below:\tit{k},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
       }
-          [\tsc{c}]
+          [\tsc{wh}]
           [\tsc{ind}P
               [\tsc{ind}]
               [\tsc{an}P
@@ -1110,10 +1039,7 @@ Therefore, the \tsc{c}P is spelled out as \tit{k}. The newly created phrase is m
           [\tsc{an}P]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
           [\tsc{ind}P,
@@ -1130,21 +1056,13 @@ Therefore, the \tsc{c}P is spelled out as \tit{k}. The newly created phrase is m
 \end{forest}
 \end{adjustbox}
 
-The next feature in the functional sequence is the feature \tsc{dx}\scsub{1}. The derivation for this feature resembles the derivation of \tsc{dx}\scsub{1} and \tsc{dx}\scsub{2} in Modern German.
-The feature is merged with the existing syntactic structure, creating a \tsc{prox}P.
+The next feature in the functional sequence is the feature \tsc{rel}. The derivation for this feature resembles the derivation of \tsc{rel} in Modern German.
+The feature is merged with the existing syntactic structure, creating a \tsc{rel}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
-Backtracking leads splitting up the \tsc{c}P from the \tsc{ind}P.
-The feature \tsc{dx}\scsub{1} is merged in both workspaces, so with \tsc{c}P and and with \tsc{ind}P. The spellout of \tsc{dx}\scsub{1} is successful when it is combined with the \tsc{c}P.
+Backtracking leads splitting up the \tsc{wh}P from the \tsc{ind}P.
+The feature \tsc{rel} is merged in both workspaces, so with \tsc{wh}P and and with \tsc{ind}P. The spellout of \tsc{rel} is successful when it is combined with the \tsc{wh}P.
 It namely forms a constituent in the lexical tree in \ref{ex:pol-entry-k}, which corresponds to the \tit{k}.
-The \tsc{prox}P is spelled out as \tit{k}, and the \tsc{prox}P is merged back to the existing syntactic structure.
-
-The derivations for the features \tsc{dx}\scsub{2}, \tsc{wh} and \tsc{rel} happen the same way.
-The features are merged with the existing syntactic structure.
-These structure do not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
-Backtracking leads splitting up the left branch from the \tsc{ind}P.
-The features are merged in both workspaces. The spellout of the features is successful when it is combined with the phrase in the left branch.
-They namely form a constituent in the lexical tree in \ref{ex:pol-entry-k}, which corresponds to the \tit{k}.
-The newly created is spelled out as \tit{k}, and they are merged back to the existing syntactic structure.
+The \tsc{rel}P is spelled out as \tit{k}, and the \tsc{rel}P is merged back to the existing syntactic structure.
 
 The next feature on the functional sequence is \tsc{f}1. This feature should somehow end up merging with \tsc{ind}P, because it forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep}, repeated from \ref{ex:pol-entry-go}, which corresponds to the \tit{go}.
 
@@ -1194,20 +1112,11 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{med}P
-                  [\tsc{dx}\scsub{2}]
-                  [\tsc{prox}P
-                      [\tsc{dx}\scsub{1}]
-                      [\tsc{c}P
-                          [\tsc{c}]
-                          [\tsc{ind}P
-                              [\tsc{ind}]
-                              [\tsc{an}P
-                                  [\tsc{an}]
-                                  [\tsc{cl}]
-                              ]
-                          ]
-                      ]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+                  [\tsc{an}P
+                      [\tsc{an}]
+                      [\tsc{cl}]
                   ]
               ]
           ]
@@ -1223,10 +1132,7 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
           [\tsc{an}P]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
           [\tsc{acc}P,
@@ -1290,20 +1196,11 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{med}P
-                  [\tsc{dx}\scsub{2}]
-                  [\tsc{prox}P
-                      [\tsc{dx}\scsub{1}]
-                      [\tsc{c}P
-                          [\tsc{c}]
-                          [\tsc{ind}P
-                              [\tsc{ind}]
-                              [\tsc{an}P
-                                  [\tsc{an}]
-                                  [\tsc{cl}]
-                              ]
-                          ]
-                      ]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+                  [\tsc{an}P
+                      [\tsc{an}]
+                      [\tsc{cl}]
                   ]
               ]
           ]
@@ -1319,10 +1216,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
           [\tsc{an}P]
           [\tsc{cl}P
               [\tsc{cl}]
-              [ΣP
-                  [Σ]
-                  [\tsc{ref}]
-              ]
+              [\tsc{ref}]
           ]
       ]
           [\tsc{dat}P,
@@ -1348,7 +1242,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
 \end{forest}
 \end{adjustbox}
 
-To summarize, I decomposed the relative pronoun into the three morphemes \tit{k}, \tit{o} and the suffix (\tit{go} and \tit{mu}). I showed which features each of the morphemes spells out, and in which constituents the features are combined. It is these constituents that determine whether the relative pronoun can delete the light head or not.
+To summarize, I decomposed the relative pronoun into the three morphemes \tit{k}, \tit{o} and the suffix (\tit{go} and \tit{mu}). I showed which features each of the morphemes spells out, and in which constituents the features are combined. It is these constituents that determine whether the light head can be deleted or not.
 
 
 
@@ -1358,7 +1252,7 @@ In this section, I compare the constituents of extra light heads to those of rel
 I start with an example with matching cases: the internal and the external case are both accusative.
 Then I give an example in which the internal case is more complex than the external case: the internal case is the dative and the external case is the accusative.
 I end with an example in which the external case is more complex than the internal case: the internal case is the accusative and the external case is the dative.
-In Polish, a matching language, only the first example is grammatical. I derive this by showing that only in this situation the relative pronoun can delete the light head. When the cases match, the light head forms namely a constituent that is contained in the structure of the relative pronoun.
+In Polish, a matching language, only the first example is grammatical. I derive this by showing that only in this situation the light head can be deleted. When the cases match, the light head forms namely a constituent that is contained in the structure of the relative pronoun.
 
 I start with the matching cases.
 Consider the example in \ref{ex:polish-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
@@ -1396,14 +1290,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
               scale=0.95,
               fit to=tree]{};
               }
-                  [\tsc{an}]
-                  [\tsc{cl}P
-                      [\tsc{cl}]
-                      [ΣP
-                          [Σ]
-                          [\tsc{ref}]
-                      ]
-                  ]
+                  [\phantom{xxx}, roof]
               ]
               [\tsc{acc}P,
               tikz={
@@ -1447,14 +1334,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
                 scale=0.95,
                 fit to=tree]{};
                 }
-                    [\tsc{an}]
-                    [\tsc{cl}P
-                        [\tsc{cl}]
-                        [ΣP
-                            [Σ]
-                            [\tsc{ref}]
-                        ]
-                    ]
+                    [\phantom{xxx}, roof]
                 ]
                 [\tsc{acc}P,
                 tikz={
@@ -1489,7 +1369,7 @@ As usual, I circle the part of the structure that corresponds to a particular le
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
-This \tsc{acc}P is also a constituent within the relative pronoun. Therefore, the relative pronoun can delete the extra light head. I signal the deletion of the extra light head by marking the content of its circle gray.
+This \tsc{acc}P is also a constituent within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 
 I continue with the example in which the internal case is more complex than the external case.
 Consider the examples in \ref{ex:polish-acc-dat-rep}, in which the internal dative case competes against the external accusative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
@@ -1529,14 +1409,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
               dashed,
               fit to=tree]{};
               }
-                  [\tsc{an}]
-                  [\tsc{cl}P
-                      [\tsc{cl}]
-                      [ΣP
-                          [Σ]
-                          [\tsc{ref}]
-                      ]
-                  ]
+                  [\phantom{xxx}, roof]
               ]
               [\tsc{acc}P,
               tikz={
@@ -1584,14 +1457,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
                 dashed,
                 fit to=tree]{};
                 }
-                    [\tsc{an}]
-                    [\tsc{cl}P
-                        [\tsc{cl}]
-                        [ΣP
-                            [Σ]
-                            [\tsc{ref}]
-                        ]
-                    ]
+                    [\phantom{xxx}, roof]
                 ]
                 [\tsc{dat}P,
                 tikz={
@@ -1635,7 +1501,7 @@ I draw a dashed circle around each constituent that is a constituent in both the
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
 Both of these constituents are also constituents within the relative pronoun. However, the (higher) \tsc{acc}P is not a constituent within the relative pronoun. The constituent in which the \tsc{acc}P is contained namely also contains the feature \tsc{f}3 that makes it a \tsc{dat}P.
-In other words, each feature and even each constituent of the extra light head is contained in the relative pronoun. However, they are not contained in the relative pronoun as a single constituent. Therefore, the relative pronoun cannot delete the extra light head.
+In other words, each feature and even each constituent of the extra light head is contained in the relative pronoun. However, they are not contained in the relative pronoun as a single constituent. Therefore, the extra light head cannot be deleted.
 
 Recall from Section \ref{sec:comparing-mg} that this is the crucial example in which Modern German and Polish differ. The contrast lies in that the extra light head in Modern German forms a single constituent and in Polish it forms two constituents. In Modern German, relative pronouns in a more complex case contain the extra light head in a less complex case as a single constituent. In Polish, they do not. Relative pronouns in a complex case still contain all features of an extra light head in a less complex case, but the extra light head is not a single constituent within the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.
 
@@ -1677,14 +1543,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
               dashed,
               fit to=tree]{};
               }
-                  [\tsc{an}]
-                  [\tsc{cl}P
-                      [\tsc{cl}]
-                      [ΣP
-                          [Σ]
-                          [\tsc{ref}]
-                      ]
-                  ]
+                  [\phantom{xxx}, roof]
               ]
               [\tsc{dat}P,
               tikz={
@@ -1737,14 +1596,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
                 dashed,
                 fit to=tree]{};
                 }
-                    [\tsc{an}]
-                    [\tsc{cl}P
-                        [\tsc{cl}]
-                        [ΣP
-                            [Σ]
-                            [\tsc{ref}]
-                        ]
-                    ]
+                    [\phantom{xxx}, roof]
                 ]
                 [\tsc{acc}P,
                 tikz={
@@ -1785,6 +1637,6 @@ I draw a dashed circle around each constituent that is a constituent in both the
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{dat}P.
 In this case, the relative pronoun does not contain both these constituents. The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent requirement cannot be met either.
 The extra light head also does not contain all constituents or features that the relative pronoun contains, because it lacks the complete \tsc{rel}P.
-Therefore, the relative pronoun cannot delete the extra light head, and the extra light head can also not delete the relative pronoun.
+Therefore, the extra light head cannot be deleted, and the extra light head can also not delete the relative pronoun.
 
 \section{Summary}
